WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
318996
Fix _doAfterNextPresentationUpdate hanging forever in views using _relatedWebView
https://bugs.webkit.org/show_bug.cgi?id=318996
Summary
Fix _doAfterNextPresentationUpdate hanging forever in views using _relatedWeb...
Ben Nham
Reported
2026-07-09 14:20:33 PDT
-[WKWebView _doAfterNextPresentationUpdate:] sometimes hangs forever when used in a WKWebView with _relatedWebView set.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2026-07-09 14:20:47 PDT
rdar://181137520
Ben Nham
Comment 2
2026-07-09 14:49:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/69043
Ben Nham
Comment 3
2026-07-10 09:28:45 PDT
***
Bug 318971
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2026-07-10 11:04:27 PDT
Committed
316919@main
(e3f74a2799bc): <
https://commits.webkit.org/316919@main
> Reviewed commits have been landed. Closing PR #69043 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug